# mhm_matrix_driver

./: README.md  mergeloop.sh  mergerhsloop.sh  mmio.c
MatrixMarket/MHM/6656/: MatrixMarket_MHM_subproblem.txt2  MatrixMarket_MHM_subproblem.txt3  MatrixMarket_MHM_subproblem.txt4  MatrixMarket_MHM_subproblem.txt5  MatrixMarket_MHM_subproblem.txt_rhs0  MatrixMarket_MHM_subproblem.txt_rhs1  MatrixMarket_MHM_subproblem.txt_rhs2  MatrixMarket_MHM_subproblem.txt_rhs3  MatrixMarket_MHM_subproblem.txt_rhs4  MatrixMarket_MHM_subproblem.txt_rhs5  figureraster.py  merge  mergeloop.sh  mergerhsloop.sh
MatrixMarket/MHM/6656/original/: MatrixMarket_MHM_subproblem.txt3  MatrixMarket_MHM_subproblem.txt4  pardiso_sym_c.out
MatrixMarket/MHM/6656/original_column-major/: MatrixMarket_MHM_subproblem.txt5  arqs.txt  header.txt  mergeloop.sh
MatrixMarket/MHM/6656/spd-row-major/: checkresult.m  checkresult2.m
MatrixMarket/MHM/6656/spd_column-major/: figureraster.py  figurevector.py  merge  mmread.m
MatrixMarket/MHM/template/: mergerhs
build.template/: README.txt
converter/coo2csc/: MatrixMarket_MHM_subproblem.mtx  compilar.sh  main  main.c
scripts/: checkresult.m  figureraster.py  figurevector.py  isspd.m  view.py
solver/pardiso/: README.txt  makefile  solverc.lst
solver/pardiso/source/: pardiso_sym_c.c  pardiso_sym_c.rhs_mtx.c
solver/spral/: configure.gnu.sh
src/: driver.h.in
src/original/: driver.h
src/original_column-major/: merge.c
src/spd/: CMakeLists.txt
src/spd-rowmajor/: merge.c
src/spd_column-major/: merge.c  mergerhs.c
(+21 files in other folders)
